tape overflow fixed

--- a/src/pages/appointment/appointment.module.css
+++ b/src/pages/appointment/appointment.module.css
@@ -1,22 +1,9 @@
-.block {
-    width: 100vw;
-    position: relative;
-}
-
-.block * {
-    position: relative;
-}
-
 .header {
     margin-bottom: 86px;
 }
 
 .form {
     margin-bottom: 77px;
-}
-
-.block_tape {
-    margin-top: -100px;
 }
 
 /* Shown block after form is filled */
@@ -38,17 +25,18 @@
     margin-bottom: 8px;
 }
 
+.block_tape {
+    position: relative;
+    overflow: hidden;
+}
+
 @media (min-width:768px) {
     .block_finish {
         margin: 34px auto 210px;
     }
 }
 
-@media (min-width:1600px) {
-    .block_tape {
-        margin-top: -50px;
-    }
-}
+@media (min-width:1600px) {}
 
 .block_hidden {
     display: none;
