--- a/src/pages/artists/artists.module.css
+++ b/src/pages/artists/artists.module.css
@@ -1,10 +1,11 @@
 .section {
     width: 100vw;
-    position: relative;
+
 }
 
-.section * {
+.block_tape {
     position: relative;
+    overflow: hidden;
 }
 
 .header {
